Revision history for {{$dist->name}}},

{{$NEXT}}
  - NewFangle::Transaction#record_custom_event now returns a true value
    (always).  The underlying C-SDK returns void (undef), but it is easier
    for the Perl api to return true for consistency and for testing. (gh#11)

0.01      2020-05-14 17:37:47 -0400
  - initial version

